--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node --watch app.js"
+    "dev": "node --watch app.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
     "nodemon": "^3.1.10"
   }
 }
